[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "=1.2.1"
cosmwasm-std = "=1.2.1"
cw-storage-plus = "=1.0.1"
cw-utils = "=1.0.1"
serde = "=1.0.152"
thiserror = "=1.0.34"

[dev-dependencies]
cw-multi-test = "=0.16.2"
