[package]
name = "publickey_to_address_example"
version = "0.1.0"
authors = ["Tung Nguyen"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "publickey_to_address"
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
bech32 = "~0.9.1"
cosmwasm-schema = "~1.2.1"
cosmwasm-std = "~1.2.1"
cw-storage-plus = "~1.0.1"
cw-utils = "~1.0.1"
hex = "~0.4.3"
ripemd = "~0.1.3"
serde = "~1.0.152"
sha2 = "~0.10.6"
thiserror = "~1.0.34"

[dev-dependencies]
cw-multi-test = "~0.16.2"
secp256k1 = "~0.27.0"
